--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <!-- HEADER -->
   <header>
     <div class="header-inner">
-      <img src="pic.jpeg" alt="Karra Rakesh Reddy" class="profile-pic" />
+      <img src="pic.jpg" alt="Karra Rakesh Reddy" class="profile-pic" />
       <div>
         <h1>Karra Rakesh Reddy</h1>
         <p>Aspiring Software Developer | Web Development Enthusiast</p>
